--- a/W10D2/widgets/index.html
+++ b/W10D2/widgets/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./dist/bundle.js"></script>
-  <title>Document</title>
+  <link rel="stylesheet" href="index.css" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+  <script src="./dist/bundle.js"></script>
+
+  <title>Widgets</title>
 </head>
 <body>
   <div id="react-root">BROKEN :(</div>
