Push the rest of the files from the last commit

--- a/W10D3/minesweeper/index.html
+++ b/W10D3/minesweeper/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
   <title>Minesweeper</title>
 </head>
 <body>
-  <main class="react-root">Broken :((</main>
+  <main id="react-root">Broken :((</main>
 </body>
 </html>
